Resolves: tdf#147955 Recalculate OOXML for bad generators with all 0.0 results

Change-Id: I0ad301dddfe986a38303ce1134e080bafbf312de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154944
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit ec912956903b2657f4a6b67a68c2687e8be32508)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154953
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>